bugfix: horizontal playlist scrollbar floated to bottom

--- a/src/view/css/player_window.css
+++ b/src/view/css/player_window.css
@@ -1,5 +1,5 @@
 #player {
-  height:165;
+  height:147;
   width:500;
   background-color:darkgrey;
 }
